tests/ui/trait-bounds/maybe-bound-has-path-args.stderr
warning: relaxing a default bound only does something for `?Sized`; all other traits are not bound by default
  --> $DIR/maybe-bound-has-path-args.rs:3:12
   |
LL | fn test<T: ?self::<i32>::Trait>() {}
   |            ^^^^^^^^^^^^^^^^^^^

error[E0109]: type arguments are not allowed on this type
  --> $DIR/maybe-bound-has-path-args.rs:3:20
   |
LL | fn test<T: ?self::<i32>::Trait>() {}
   |             ----   ^^^ type argument not allowed
   |             |
   |             not allowed on this type

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0109`.
